fix overflow x

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
-body {
-    overflow-x: hidden;
+.row {
+    overflow-x: hidden !important;
 }
 
 .homeslide {
